# rust_vulkan_graphics

./: .gitignore  Cargo.toml  LICENSE  readme.md
examples/: compute.rs  cube_spinning.rs  gui.rs  obj.rs
proc_macros/: Cargo.toml
proc_macros/src/: codegen.rs  entry_point.rs  lib.rs  structs.rs
src/: camera_maths.rs  general_compute.rs  general_graphics.rs  gui.rs  lib.rs  mesh.rs  pipeline.rs  test_cube.rs  vulkano_wrapping.rs
src/meshes/: coloured_mesh.rs  mesh.rs  mod.rs
