[package]
name = "rust_vulkan_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
maths = {git = "https://github.com/hindlet/rust_maths.git", package = "rust_maths", version = "*"}
winit = "0.28"
vulkano = "0.33"
vulkano-util = "0.33"
vulkano-win = "0.33"
bytemuck = "1.13.1"
egui = "0.21.0"
egui_winit_vulkano = "0.24.0"
macros = {path = "proc_macros", package = "proc_macros", version = "*"}
